--- a/Mask/AddMask.html
+++ b/Mask/AddMask.html
@@ -23,7 +23,7 @@
 <body>
 <div style="width:300px;padding:20px;border:3px solid;position: relative">
     <div class="box" id="target">
-        <img src="../../images/rose.jpg"  width="150"/>
+        <img src="../images/rose.jpg"  width="150"/>
     </div>
 </div>
 <script src="AddMask.js"></script>
